--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/home/home.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/home/home.html
@@ -7,7 +7,7 @@
     </div>
   </uib-accordion> -->
 
-  
+
   
   <!-- Splash banner that only shows when not logged in -->
   <div class="banner" show-authed="false">
@@ -23,10 +23,11 @@
     </ng-map>
     <!-- <ng-map  center="[40.74, -74.18]" style="width:100%; height: 100%; " zoom="15"></ng-map> -->
   </div>
-
-
+dsfsdfsdf
+  <probando-component></probando-component>{{$ctrl.a}}
+  <Follow-Btn user="$ctrl.a" u="poco"></Follow-Btn>
   <div class="divmio">divmio
-    <md-button class="md-fab" aria-label="Eat cake">
+    <md-button class="md-fab" aria-label="Eat cake" ng>
       fvdsgd
     </md-button>
   </div>
