--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/index.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous">
     <link href="css/main.css" rel="stylesheet" type="text/css"/>
     <link href="css/navStyle.css" rel="stylesheet" type="text/css" />
-
+    <link href="css/heroStyle.css" rel="stylesheet" type="text/css" />
     
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/2.0.12/bootstrap-native-v4.min.js"></script>
 
