working in  list and detail views

--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/home/home.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/home/home.html
@@ -1,6 +1,9 @@
  <div class="home-page">
    
    <My-Hero info="$ctrl.hero"></My-Hero>
+   
+   <button ng-click="openCategory()" type="button" class="btn btn-large btn-block btn-primary">button</button>
+   
 
 <section>
    <div class="divStandar gridCategoryContainer">
