--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/auth/auth.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/auth/auth.html
@@ -24,7 +24,7 @@
               <input class="form-control form-control-lg"
                 type="text"
                 placeholder="Username"
-                ng-model="$ctrl.formData.username" />
+                ng-model="$ctrl.formData.user" />
             </fieldset>
 
             <fieldset class="form-group">
@@ -38,7 +38,11 @@
               <input class="form-control form-control-lg"
                 type="password"
                 placeholder="Password"
-                ng-model="$ctrl.formData.password" />
+                ng-model="$ctrl.formData.password1" />
+            </fieldset>
+
+            <fieldset class="form-group" ng-show="$ctrl.authType === 'register'">
+              <input class="form-control form-control-lg" type="password" placeholder="Password" ng-model="$ctrl.formData.password2" />
             </fieldset>
 
             <button class="btn btn-lg btn-primary pull-xs-right"
