--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/auth/auth.html
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/src/js/auth/auth.html
@@ -21,30 +21,37 @@
           <fieldset ng-disabled="$ctrl.isSubmitting">
 
             <fieldset class="form-group" ng-show="$ctrl.authType === 'register'">
-              <input class="form-control form-control-lg"
+              <input required class="form-control form-control-lg"
                 type="text"
                 placeholder="Username"
                 ng-model="$ctrl.formData.user" />
             </fieldset>
 
             <fieldset class="form-group">
-              <input class="form-control form-control-lg"
+              <input required class="form-control form-control-lg"
                 type="email"
                 placeholder="Email"
                 ng-model="$ctrl.formData.email" />
             </fieldset>
 
             <fieldset class="form-group">
-              <input class="form-control form-control-lg"
+              <input required class="form-control form-control-lg"
                 type="password"
                 placeholder="Password"
-                ng-model="$ctrl.formData.password1" />
+                ng-model="$ctrl.formData.password1"
+                ng-style="$ctrl.errorPass"
+                ng-focus="$ctrl.errorPass={}"
+                 />
             </fieldset>
 
             <fieldset class="form-group" ng-show="$ctrl.authType === 'register'">
-              <input class="form-control form-control-lg" type="password" placeholder="Password" ng-model="$ctrl.formData.password2" />
+              <input required class="form-control form-control-lg"
+                type="password" 
+                placeholder="Password" 
+                ng-model="$ctrl.formData.password2"
+                ng-style="$ctrl.errorPass" />
+                <p ng-style="$ctrl.errorPassText" ng-show="$ctrl.errorPass.border">Los password no coinciden reviselos.</p>
             </fieldset>
-
             <button class="btn btn-lg btn-primary pull-xs-right"
               type="submit"
               ng-bind="::$ctrl.title">
