--- a/frontend/src/js/listProd/listProd.html
+++ b/frontend/src/js/listProd/listProd.html
@@ -1,13 +1,1 @@
-<section>
-    <div class="divStandar gridCategoryContainer">
-      <a class="pointer" ng-repeat="test in $ctrl.detailTest" >
-          <div class="gridCategory">
-                <div class="imgCategory">
-                    <img src="../../../images/{{test.name | lowercase}}.svg" alt="Image">
-                </div>
-                <p>{{test.description}}</p>
-              
-          </div>
-      </a>
-    </div>
-  </section>
+<my-test ng-repeat="detailTest in $ctrl.detailTest" info="detailTest"></my-test>
