Working with user profile

--- a/frontend/src/js/admin/admin.html
+++ b/frontend/src/js/admin/admin.html
@@ -101,7 +101,7 @@
                             </div>
                         </td>
                         <td>
-                            <a ng-click="$ctrl.operacion()" class="btn btn-danger" title="Eliminar usuario">
+                            <a ng-click="$ctrl.deleteUser(data)" class="btn btn-danger" title="Eliminar usuario">
                                 <i class="glyphicon glyphicon-remove"></i>
                             </a>
                         </td>
