--- a/frontend/src/js/profile_user/profile_user.html
+++ b/frontend/src/js/profile_user/profile_user.html
@@ -1,7 +1,11 @@
 <My-Hero info="$ctrl.hero"></My-Hero>
 
 <div class="lateralMarginAuto contMedia">
-    <img class="avatar" src="{{$ctrl.datos_usuario.media}}{{$ctrl.datos_usuario.name}}" alt="">
+    <img class="avatar" src="{{$ctrl.user.media}}" alt="">
+</div>
+<div class="lateralMarginAuto contMedia">
+    <button ng-click="$ctrl.changeAvatar()" type="button">Cambiar avatar</button>
+    <input ng-model="$ctrl.file" type="file" id="file" name="file">
 </div>
 
 <div class="lateralMarginAuto contForm">
@@ -9,25 +13,25 @@
 
         <div class="divInput">
             <label for="user_name">Nombre de usuario</label>
-            <input class="inputsProfile" ng-model="$ctrl.datos_usuario.user" type="text" id="user_name" name="user_name">
+            <input class="inputsProfile" ng-model="$ctrl.datos_usuario.user" type="text" id="user_name" name="user_name" required>
             <div ng-show='sfIn.tb.$dirty && sfIn.tb.$invalid'>
                 <span ng-show='sfIn.tb.$error.required'>Required</span>
             </div>
         </div>
 
         <div class="divInput">
-            <label for="name">Nombre {{$ctrl.datos_usuario.media}}</label>
-            <input class="inputsProfile" ng-model="$ctrl.datos_usuario.name" id="name" name="name" type="text">
+            <label for="name">Nombre </label>
+            <input class="inputsProfile" ng-model="$ctrl.datos_usuario.name" id="name" name="name" type="text" required>
         </div>
 
         <div class="divInput">
             <label for="surname">Apellido</label>
-            <input class="inputsProfile" ng-model="$ctrl.datos_usuario.surname" id="surname" name="surname" type="text">
+            <input class="inputsProfile" ng-model="$ctrl.datos_usuario.surname" id="surname" name="surname" type="text" required>
         </div>
 
         <div class="divInput">
             <label for="email">Email</label>
-            <input class="inputsProfile" ng-model="$ctrl.datos_usuario.email" type="email" id="email" name="email" >
+            <input class="inputsProfile" ng-model="$ctrl.datos_usuario.email" type="email" id="email" name="email"  required>
         </div>
 
         <div class="divInput">
