add stripe as payment method on frontend + add basic plan user on backend

--- a/frontend/src/js/home/home.html
+++ b/frontend/src/js/home/home.html
@@ -55,7 +55,7 @@
     <img class="container-plan__imgHome" src="../images/buy1.svg" alt="Plan Basico">
     <p class="container-text__parrafo">Test</p>
     <p class="container-text__parrafo">20€/mes</p>
-    <button type="submit" class="btnColor">Comprar</button>
+    <button type="submit" id="btnStripe" class="btnColor">Comprar</button>
   </div>
 
   <div class="container-plan__section">
