--- a/frontend/src/js/home/home.html
+++ b/frontend/src/js/home/home.html
@@ -55,7 +55,7 @@
     <img class="container-plan__imgHome" src="../images/buy1.svg" alt="Plan Basico">
     <p class="container-text__parrafo">Test</p>
     <p class="container-text__parrafo">20€/mes</p>
-    <button type="submit" id="btnStripe" class="btnColor">Comprar</button>
+    <button type="submit" id="btnStripeBa" class="btnColor">Comprar</button>
   </div>
 
   <div class="container-plan__section">
@@ -63,7 +63,7 @@
     <img class="container-plan__imgHome" src="../images/buy2.svg" alt="Plan Intermedio">
     <p class="container-text__parrafo">Soporte email + Test</p>
     <p class="container-text__parrafo">35€/mes</p>
-    <button type="submit" class="btnColor">Comprar</button>
+    <button type="submit" id="btnStripeInt" class="btnColor">Comprar</button>
   </div>
 
   <div class="container-plan__section">
@@ -71,7 +71,7 @@
     <img class="container-plan__imgHome" src="../images/buy3.svg" alt="Plan Experto">
     <p class="container-text__parrafo">Soporte email +  Skype + Test</p>
     <p class="container-text__parrafo">50€/mes</p>
-    <button type="submit" class="btnColor">Comprar</button>
+    <button type="submit" id="btnStripeEx" class="btnColor">Comprar</button>
   </div>
 </section>
 
