change connect-multyparty to multer in backend + reconfigure passwd recovery

--- a/frontend/src/js/home/home.html
+++ b/frontend/src/js/home/home.html
@@ -42,7 +42,6 @@
   </div>
 
 <h3 align="center">Categorías</h3>
-
 <section>
   <div class="divStandar gridCategoryContainer">
     <my-card ng-repeat="category in $ctrl.categories" info="category"></my-card>
@@ -52,6 +51,7 @@
 <section class="container-plan divStandar">
   <div class="container-plan__section">
     <h2>Plan Basico</h2>
+    <img src="../../../../backend/uploads/users/7cMlg83XGAewMlCANd4mUpC5.jpg" height="50" width="50">
     <img class="container-plan__imgHome" src="../images/buy1.svg" alt="Plan Basico">
     <p class="container-text__parrafo">Test</p>
     <p class="container-text__parrafo">20€/mes</p>
