create component to Plan/Stripe + fix show damin menu + add check user lock + add scroll on listTest

--- a/frontend/src/js/home/home.html
+++ b/frontend/src/js/home/home.html
@@ -6,7 +6,7 @@
   <section>
     <My-Page info="$ctrl.page_1"></My-Page>
   </section>
-
+  
   <!-- <Follow-Btn css="$ctrl.css" user="$ctrl.a" u="poco"></Follow-Btn>
   
   
@@ -48,31 +48,6 @@
   </div>
 </section>
 
-<section class="container-plan divStandar">
-  <div class="container-plan__section">
-    <h2>Plan Basico</h2>
-    <img src="../../../../backend/uploads/users/7cMlg83XGAewMlCANd4mUpC5.jpg" height="50" width="50">
-    <img class="container-plan__imgHome" src="../images/buy1.svg" alt="Plan Basico">
-    <p class="container-text__parrafo">Test</p>
-    <p class="container-text__parrafo">20€/mes</p>
-    <button type="submit" id="btnStripeBa" class="btnColor">Comprar</button>
-  </div>
-
-  <div class="container-plan__section">
-    <h2>Plan Intermedio</h2>
-    <img class="container-plan__imgHome" src="../images/buy2.svg" alt="Plan Intermedio">
-    <p class="container-text__parrafo">Soporte email + Test</p>
-    <p class="container-text__parrafo">35€/mes</p>
-    <button type="submit" id="btnStripeInt" class="btnColor">Comprar</button>
-  </div>
-
-  <div class="container-plan__section">
-    <h2>Plan Experto</h2>
-    <img class="container-plan__imgHome" src="../images/buy3.svg" alt="Plan Experto">
-    <p class="container-text__parrafo">Soporte email +  Skype + Test</p>
-    <p class="container-text__parrafo">50€/mes</p>
-    <button type="submit" id="btnStripeEx" class="btnColor">Comprar</button>
-  </div>
-</section>
+<my-plan info="plans"></my-plan>
 
 </div>
